unpackaged/main/default/objects/USAL_Claim_Data__c/USAL_Claim_Data__c.object-meta.xml
<CustomObject>
    <description>reflects claim data for users to view without a Claim Vantage full license</description>
    <label>USAL Claim Data</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>USAL Claim Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>USAL Claims Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>