unpackaged/main/default/objects/USAL_Claim_Data__c/fields/Absence_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Absence_End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Absence End Date</label>
    <type>Date</type>
</CustomField>