unpackaged/main/default/objects/USAL_Claim_Data__c/fields/Absence_Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>Absence_Status_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Absence Status Reason</label>
    <length>80</length>
    <type>Text</type>
</CustomField>