unpackaged/main/default/objects/USAL_Claim_Data__c/fields/All_Info_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>All_Info_Received_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>All Info Received Date</label>
    <type>Date</type>
</CustomField>