unpackaged/main/default/objects/USAL_Claim_Data__c/fields/Claim_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Claim_Created_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Claim Created Date</label>
    <type>DateTime</type>
</CustomField>