unpackaged/main/default/objects/USAL_Claim_Data__c/fields/Claim_Owner__c.field-meta.xml
<CustomField>
    <fullName>Claim_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Claim Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>USAL_Claims</relationshipName>
    <type>Lookup</type>
</CustomField>