unpackaged/main/default/objects/USAL_Claim_Data__c/fields/Claim_Status__c.field-meta.xml
<CustomField>
    <fullName>Claim_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Claim Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>