unpackaged/main/default/objects/USAL_Claim_Data__c/fields/Claimaint_Insured__c.field-meta.xml
<CustomField>
    <fullName>Claimaint_Insured__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Claimaint/Insured</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>USAL_Claims</relationshipName>
    <type>Lookup</type>
</CustomField>