unpackaged/main/default/objects/USAL_Claim_Data__c/fields/Claimant_Name__c.field-meta.xml
<CustomField>
    <fullName>Claimant_Name__c</fullName>
    <description>captures the claimant name from a claim</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Claimant Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>