unpackaged/main/default/objects/USAL_Claim_Data__c/fields/CV_External_ID__c.field-meta.xml
<CustomField>
    <fullName>CV_External_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>CV External ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>