unpackaged/main/default/objects/USAL_Claim_Data__c/fields/Dependent_No__c.field-meta.xml
<CustomField>
    <fullName>Dependent_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dependent No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>