unpackaged/main/default/objects/USAL_Claim_Data__c/fields/Group_No__c.field-meta.xml
<CustomField>
    <fullName>Group_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Group_No</label>
    <length>15</length>
    <type>Text</type>
</CustomField>