unpackaged/main/default/objects/USAL_Claim_Data__c/fields/Leave_Type__c.field-meta.xml
<CustomField>
    <fullName>Leave_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Leave Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>