unpackaged/main/default/objects/USAL_Claim_Data__c/fields/Member_No__c.field-meta.xml
<CustomField>
    <fullName>Member_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Member_No</label>
    <length>15</length>
    <type>Text</type>
</CustomField>