unpackaged/main/default/objects/USAL_Claim_Data__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reason</label>
    <length>80</length>
    <type>Text</type>
</CustomField>